# walactv-scrapper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  database.py  main.py  pyproject.toml  scrapper.py
.github/workflows/: ci.yml
ansible/: ansible.cfg  ansible_playbook.yml  despliegue_apk.yml  maquinas.example  servidores_playbook.yaml
database/: migrate_add_json_tracking.sql  schema.sql  schema.sql.legacy
docker/: .Caddyfile  .env-example  Dockerfile  Dockerfile-acestream  Dockerfile-acestream-arm64  Dockerfile-acestream-cleaner  Dockerfile-acestream-engine  Dockerfile-acestream-init  Dockerfile-acestream-proxy  Dockerfile-acestream-x64  Dockerfile-iptv  Dockerfile-proxy  Dockerfile.ofelia  Dockerfile.replay-sync  Dockerfile.sync  Dockerfile.tmdb  acestream-init.sh  docker-compose-acestream.yaml  docker-compose-iptv.yaml  docker-compose.yaml  entrypoint-acestream.sh  entrypoint-sync.sh  entrypoint-tmdb.sh  nginx.conf  ofelia-config.ini  run-sync.sh
docker/config/: nginx.conf  requirements-replay-sync.txt  requirements-sync-iptv.txt  requirements-tmdb.txt  requirements.txt  supervisord-arm64.conf  supervisord.conf
docker/nginx/: Dockerfile  nginx.conf
docker/scripts/: acestream-init-arm64.sh  acestream-init.sh  cleaner.sh  replace.sh  start-all-arm64.sh  start-all.sh  verify-dockerfile.sh
dockers/: docker-compose-acestream.yaml  docker-compose.yaml
iptv-api/: .gitignore  AGENTS.md  README.md  requirements.txt
iptv-api/database/: schema.sql
iptv-api/docker/: Dockerfile  Dockerfile.sync  crontab  docker-compose.yml
iptv-api/nginx/: nginx.conf
iptv-api/postman/: postman.json
iptv-api/scripts/: api.py  sync_iptv.py
iptv-api/services/: __init__.py  bulk_insert.py  device_service.py  playlist_service.py  stream_service.py  user_service.py
iptv-api/utils/: config.py  constants.py  models.py
iptv_scrapper/: .env-example  backfill_imdb_ids.py  config.py  main.py  populate_episode_imdb_ids.py  scrapper.py  sync_iptv.py
iptv_scrapper/resolvers/: replay_embed_resolver.js
iptv_scrapper/services/: bulk_insert.py  event_images.py  football_logos.py
iptv_scrapper/utils/: series_keys.py
resources/: ansible_playbook.yml  canales.json  football_logo_aliases.json  mapeo_canales_futbol_en_tv.json  tennis_flag_aliases.json
resources/images/defaults/: baloncesto_default.avif  beisbol_default.avif  futbol_default.avif
scripts/: acestream_proxy.py  actualiza_canales_iptv.py  actualiza_epg.py  backfill_imdb_ids.py  config.py  database.py  generate_content_json.py  import_imdb_ratings.py  iptv_proxy.py  main.py  main2.py  mapeo_canales_iptv.py  newScrapper.py  openRouter.py  openvpn.py  parseAcestreamLinks.py  poblar_mapeo_canales.py  populate_episode_imdb_ids.py  proxificaUrl.py  prueba.py  prueba2.py  requirements.txt  scrape_tmdb_metadata.py  scrapper.py  sinc_iptv.py  sync_iptv.py  sync_replays.py
scripts/services/: bulk_insert.py  event_images.py  football_logos.py  tennis_flags.py
scripts/utils/: constants.py  replay_streamw_resolver.js  replay_token_resolver.js  series_keys.py
src/iptv_scrapper/resolvers/: replay_token_resolver.js
tests/: conftest.py  test_database.py  test_smoke_crons.py  test_sync_iptv.py  test_sync_iptv_normalization.py
